salesforce-main/src/main/default/objects/Credit_Note_Backing_Detail__c/Credit_Note_Backing_Detail__c.object-meta.xml
<CustomObject>
    <label>Credit Note Backing Detail</label>
    <nameField>
        <displayFormat>CNBD-{000000}</displayFormat>
        <label>Credit Note Backing Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Backing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>