salesforce-main/src/main/default/objects/Credit_Note_Backing_Detail__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>