salesforce-main/src/main/default/objects/Credit_Note_Backing_Detail__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>blng__CreditNote__c</referenceTo>
    <relationshipLabel>Credit Note Backing Details</relationshipLabel>
    <relationshipName>Credit_Note_Backing_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>