salesforce-main/src/main/default/objects/Credit_Note_Backing_Detail__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <label>Customer PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>