salesforce-main/src/main/default/objects/Credit_Note_Backing_Detail__c/fields/Tuition_Price__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Price__c</fullName>
    <label>Tuition Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>